@@ -23,10 +23,9 @@
 
 /*
  * @test
- * @bug 8246774 8326879
+ * @bug 8246774
  * @summary Basic test that serializes and deserializes a number of records
  * @run junit BasicRecordSer
- * @run testng/othervm --enable-preview BasicRecordSer
  */
 
 import java.io.ByteArrayInputStream;
